[package]
name = "git-suggest-ownership"
authors = ["Joel Nises <joel.nises@gmail.com>"]
version = "0.5.0"
edition = "2021"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
stderrlog = "0.5"
indicatif = "0.17"
rayon = "1.5"
thread_local = "1.1"
git2 = { version = "0.15", default-features = false }
